--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "cargo-single-pyo3"
 version = "0.1.0"
 authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
 edition = "2018"
+homepage = "https://github.com/willcrichton/cargo-single-pyo3"
+repository = "https://github.com/willcrichton/cargo-single-pyo3"
+license = "MIT"
+license-file = "LICENSE"
 
 [dependencies]
 clap = "2.33"
