Reduce dependencies, bump to 0.1.1

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-single-pyo3"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
 description = "Generate a Python module from a single Rust file."
 edition = "2018"
@@ -9,7 +9,7 @@ repository = "https://github.com/willcrichton/cargo-single-pyo3"
 license = "MIT"
 
 [dependencies]
-clap = "2.33"
-anyhow = "1.0"
+clap = {version = "2", default-features = false}
+anyhow = "1"
 toml = "0.5"
-serde = {version = "1.0", features = ["derive"]}
+serde = {version = "1", features = ["derive"]}
